packages/shared/components/tag-management/TagManagement.module.scss
// (c) Copyright Ascensio System SIA 2009-2026
//
// This program is a free software product.
// You can redistribute it and/or modify it under the terms
// of the GNU Affero General Public License (AGPL) version 3 as published by the Free Software
// Foundation. In accordance with Section 7(a) of the GNU AGPL its Section 15 shall be amended
// to the effect that Ascensio System SIA expressly excludes the warranty of non-infringement of
// any third-party rights.
//
// This program is distributed WITHOUT ANY WARRANTY, without even the implied warranty
// of MERCHANTABILITY or FITNESS FOR A PARTICULAR  PURPOSE. For details, see
// the GNU AGPL at: http://www.gnu.org/licenses/agpl-3.0.html
//
// You can contact Ascensio System SIA at Lubanas st. 125a-25, Riga, Latvia, EU, LV-1021.
//
// The  interactive user interfaces in modified source and object code versions of the Program must
// display Appropriate Legal Notices, as required under Section 5 of the GNU AGPL version 3.
//
// Pursuant to Section 7(b) of the License you must retain the original Product logo when
// distributing the program. Pursuant to Section 7(e) we decline to grant you any rights under
// trademark law for use of our trademarks.
//
// All the Product's GUI elements, including illustrations and icon sets, as well as technical writing
// content are licensed under the terms of the Creative Commons Attribution-ShareAlike 4.0
// International. See the License terms at http://creativecommons.org/licenses/by-sa/4.0/legalcode

@use "@docspace/ui-kit/styles/variables/colors";
@use "@docspace/ui-kit/styles/mixins";

:global(.light) {
  :local {
    .tagManagement {
      --selector-background-color: #{colors.$white};
    }
    .text,
    .createTagText {
      --text-color: #{colors.$gray};
    }

    .divider {
      --divider-color: #{colors.$gray-light-mid};
    }
  }
}

:global(.dark) {
  :local {
    .tagManagement {
      --selector-background-color: #{colors.$dark-gray-light};
    }
    .text,
    .createTagText {
      --text-color: #{colors.$gray-dark};
    }

    .divider {
      --divider-color: #{colors.$gray-dark-strong};
    }
  }
}

:global(#modal-dialog) {
  :local {
    .modalBody {
      padding: 0px;
    }
  }
}

.tagManagement {
  position: fixed;
  z-index: 310;

  padding: 8px 16px;

  border-radius: 8px;

  max-height: 300px;
  height: auto;
  width: 254px;

  transition: left 0.5s ease;
  will-change: left, top;

  background-color: var(--selector-background-color);

  box-shadow:
    0px 8px 16px 0px colors.$box-shadow-color,
    0px 0px 4px 0px colors.$box-shadow-second-color;

  box-sizing: border-box;

  display: flex;
  flex-direction: column;

  @include mixins.mobile {
    width: 100%;
    position: static;
    box-shadow: none;
    height: 300px;
  }
}

.divider {
  margin-block: 3px;
  background-color: var(--divider-color);
  border: none;
  height: 1px;
  flex-shrink: 0;
  width: 100%;
}

.wrapperCreateTag {
  display: flex;
  align-items: center;
  gap: 10px;

  flex-shrink: 0;
  height: 30px;
  box-sizing: border-box;

  padding-block: 4px 8px;

  .createTagText {
    flex-shrink: 0;
    color: var(--text-color);
  }

  .createTag {
    display: flex;
    gap: 8px;
    cursor: pointer;
    padding: 2px 8px;
    height: 24px;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .createTagIcon.createTagIcon.createTagIcon {
    width: 12px;
    height: 12px;

    padding: 0px;

    svg path {
      align-self: center;
      fill: #{colors.$light-blue-main};
    }
  }
}

.wrapperList {
  margin-inline-end: -17px;

  @include mixins.mobile {
    margin-inline-end: -8px;
  }
}

.text {
  padding-block: 4px 8px;
  color: var(--text-color);
}

.row {
  display: flex;
  align-items: center;
  gap: 12px;

  height: 30px;

  .editInput {
    padding: 2px 8px;
    flex-grow: 1;
    flex-shrink: 0;
  }

  .checkbox svg {
    margin: 0;
  }

  .editIcon,
  .deleteIcon {
    flex-shrink: 0;
  }
  .tag {
    margin-inline-end: auto;
  }

  @media (hover: hover) {
    & {
      cursor: pointer;
    }

    .editIcon,
    .deleteIcon {
      visibility: hidden;
    }

    &:hover {
      .editIcon,
      .deleteIcon {
        visibility: visible;
      }
    }
  }
}

.textLoader {
  padding-block: 4px 2px;
}

.loaderWrapper {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.rowLoader {
  .loaderCheckIcon {
    flex-shrink: 0;
    flex-grow: 0;
  }
}

.input[data-size="base"] {
  padding: 4px 0px;
  flex-grow: 0;
}

.checkCross {
  display: flex;
  align-items: center;
  gap: 4px;
}

.checkIcon,
.crossIcon {
  padding: 3px;
  border-radius: 3px;
  border: 1px solid var(--icon-button-color);

  @media (hover: hover) and (pointer: fine) {
    &:hover {
      border-color: var(--icon-button-hover-color);
    }
  }
}

.tag {
  display: inline-block;

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 13px;
  line-height: 20px;

  height: 24px;

  padding: 1px 7px;

  box-sizing: border-box;
}

.scrollbar {
  --scrollbar-padding-inline-end-mobile: 12px;
}

.editTagModalText {
  padding-block-end: 16px;
  font-size: 13px;
  line-height: 20px;
}

.deleteTagModalText {
  padding-block-end: 16px;
  font-size: 13px;
  line-height: 20px;
}

.roomName {
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0px;
}

